# marquee-scroller

./: .gitignore  .markdownlint.yaml  CLAUDE.md  Dockerfile.pytest  README.md  RESUME.md  makefile  platformio.ini  pyproject.toml
.github/: release.yaml
docs/: ARCHITECTURE.md  ASYNC_MIGRATION.md  CALENDAR_ADAPTATION.md  CODE_FLOW.md  CODE_REVIEW.md  DECISION_LOG.md  FIRMWARE_BINARY_HOSTING.md  HARDWARE_TEST_ECDSA_VERIFY.md  LIVE_DEVICE_TESTING.md  MEMORY_ANALYSIS.md  OTA_STRATEGY.md  PLAN.md  SECURITY_AUDIT.md  SPA_PARITY.md  TEST_RESULTS_HEARTBEAT_LIVE.md  TEST_RESULTS_HEARTBEAT_SERVER.md  TEST_RESULTS_OTA_ROLLBACK.md  TEST_RESULTS_SECURITY_HARDENING.md  WEBUI.md
marquee/: ClockStyles.h  ConfigUpdateVerify.cpp  ConfigUpdateVerify.h  CorsSupport.cpp  CorsSupport.h  EnrollmentClient.cpp  EnrollmentClient.h  FamilyHelpers.cpp  FamilyHelpers.h  HwVerifyTest.cpp  HwVerifyTest.h  MdnsHelpers.cpp  MdnsHelpers.h  NetworkVisibility.cpp  NetworkVisibility.h  OpenWeatherMapClient.cpp  OpenWeatherMapClient.h  OriginAllowlist.cpp  OriginAllowlist.h  SecurityHelpers.cpp  (+14 more)
server/: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
server/alembic/: alembic.ini
server/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
server/app/routers/: calendar.py  devices.py
server/app/services/: calendar_event.py  calendar_gen.py  heartbeat.py
server/data/: wagfam_calendar_data.json
server/tests/: conftest.py  test_api_calendar.py  test_api_devices.py  test_calendar_event.py  test_calendar_gen.py  test_github_raw_compat.py  test_heartbeat.py
(+72 files in other folders)
